Fixed the font size on smaller screens

--- a/style.scss
+++ b/style.scss
@@ -148,15 +148,17 @@ main {
         transform: translate(-50%, -50%);
 
         text-align: center;
-        font-size: 2.2vw;
+        // font-size: max(200px, 2.2vw);
+        font-size: 40px;
+        // font-size: 2.2vw;
         font-family: Arame;
-        line-height: 2.5rem;
+        line-height: 2.4rem;
 
         .icons img {
             height: 1.6rem;
             margin-left: 0.8rem;
             margin-right: 0.8rem;
-            margin-bottom: 0.6rem;
+            margin-bottom: 1.4vh;
         }
         .icon2 {
             transform: rotate(180deg);
